# personalized-learning-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TutorAgent_架构与不足分析.md  docker-compose.yml  pyproject.toml  requirements.txt  resume_updated.md  run.py  test_api.py
backend/: api.py  config.py  llm.py  main.py  memory.py  models.py  rag.py  runtime.py  test_sandbox.py
backend/agents/: __init__.py  assessor_agent.py  base_tutor.py  knowledge_agent.py  math_tutor.py  programming_tutor.py  router_agent.py
backend/graph/: __init__.py  agents.py  builder.py  llm.py  nodes.py  state.py  tools.py
backend/routers/: __init__.py  code.py  exercise.py  knowledge.py  mcp.py  session.py  student.py  tutor.py  upload.py
backend/schemas/: __init__.py  requests.py
backend/services/: __init__.py  context.py  intent.py  mcp_bridge.py  sse.py  streaming.py
backend/tools/: __init__.py  code_executor.py  code_validator.py  exercise_generator.py  mcp_tools.py
data/courses/: data_structures.md  python.md
frontend/: app.js  index.html  style.css
mcp_servers/: assessment_server.py  code_executor_server.py  exercise_generator_server.py
scripts/: benchmark_router.py  generate_mock_data.py
