[project]
name = "education-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.6",
    "langchain>=0.3.1",
    "langgraph>=0.2.60",
    "langchain-community>=0.3.1",
    "langchain-text-splitters>=0.3.0",
    "langchain-mcp-adapters>=0.1.0",
    "chromadb>=0.5.11",
    "python-dotenv>=1.0.1",
    "pypdf>=4.3.1",
    "python-multipart>=0.0.9",
    "dashscope>=1.20.11",
    "openai>=1.0.0",
    "pydantic>=2.9.2",
    "aiofiles>=24.1.0",
    "redis>=5.1.0",
    "mcp>=1.0.0",
    "httpx>=0.28.1",
]
